--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
       "fastify-cli": "^5.1.0",
       "fastify-error-page": "^4.0.0",
       "fastify-method-override": "^1.5.9",
-      "fastify-objectionjs": "^1.0.0",
+      "fastify-objectionjs": "^2.0.1",
       "fastify-reverse-routes": "^3.0.0",
-      "heroku": "^8.7.1",
+      "heroku": "^0.2.0",
       "i18next": "^21.9.1",
       "jquery": "^3.6.0",
       "knex": "^2.4.0",
@@ -57,6 +57,7 @@
       "pino-pretty": "^9.0.1",
       "pug": "^3.0.2",
       "qs": "^6.11.0",
+      "rollbar": "^2.26.3",
       "sqlite3": "^5.0.11",
       "webpack": "^5.74.0"
    },
