--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,12 +18,10 @@ jobs:
     - name: Install dependencies
       run: make deploy
 
-    - name: Fix dependencies
-      run: npm audit fix
-
     - name: Run tests
       run: make test
       env: # Or as an environment variable
+        PARCEL_WORKERS: 0
         SESSION_KEY: ${{ secrets.SESSION_KEY }}
         PORT: ${{ secrets.PORT }}
         POST_SERVER_ITEM_ACCESS_TOKEN: ${{ secrets.POST_SERVER_ITEM_ACCESS_TOKEN }}
